--- a/App/View/welcomemodule/View/FormValidation.html
+++ b/App/View/welcomemodule/View/FormValidation.html
@@ -9,6 +9,15 @@
 </head>
 <body>
 
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        
+    </div>
+
+
+
+</nav>
+
 
 <script src="../../../bower_components/angular/angular.min.js"></script>
 <script src="../controler/FormValidationControler.js"></script>
